# PyTado

./: .coveragerc  .envrc  .gitignore  .pre-commit-config.yaml  .pylintrc  AUTHORS  CONTRIBUTION.md  MigrationV1.0.0.md  README.md  SECURITY.md  eleventy.config.js  generate_api_docs.py  package.json  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-advanced.yml  codeql.yml  deploy-11ty-pages.yml  lint-and-test-matrix.yml  pre-commit.yml  publish-to-pypi.yml  python-publish.yml  pythonpackage.yml  report-test-results.yml  test.yml
PyTado/: __init__.py  __main__.py  const.py  exceptions.py  http.py  interface.py  logger.py  types.py  zone.py
PyTado/factory/: __init__.py  initializer.py
PyTado/http/: __init__.py  http.py
PyTado/interface/: __init__.py  interface.py
PyTado/interface/api/: __init__.py  base_tado.py  hops_tado.py  my_tado.py
PyTado/logging/: logging.py
PyTado/models/: __init__.py  historic.py  home.py  return_models.py  util.py
PyTado/models/common/: schedule.py
PyTado/models/line_x/: __init__.py  device.py  installation.py  room.py  schedule.py
PyTado/models/pre_line_x/: __init__.py  boiler.py  device.py  flow_temperature_optimization.py  home.py  schedule.py  zone.py
PyTado/polyfill/: __init__.py  strenum.py
PyTado/zone/: __init__.py  base_zone.py  hops_zone.py  my_zone.py
docs/_data/: metadata.js
docs/_includes/layouts/: base.njk
docs/content/: contribution.md  index.md
examples/: __init__.py  example.py
public/css/: index.css
scripts/: bootstrap  refresh.sh
tests/: common.py  test_hops_zone.py  test_http.py  test_main.py  test_my_tado.py  test_my_zone.py  test_tado.py  test_tado_initializer.py  test_tado_interface.py  test_zone.py
tests/fixtures/: consumption_overview.json  flow_temperature_optimization.json  history.zone_day_report.json  home_by_bridge.boiler_max_output_temperature.json  home_by_bridge.boiler_wiring_installation_state.json  my_api_issue_88.termination_condition.json  running_times.json  set_flow_temperature_optimization_issue_143.json  smartac3.fan_mode.json  smartac3.with_swing.json  tadov2.home_state.auto_not_supported.json  tadov2.home_state.auto_supported.auto_mode.json  tadov2.home_state.auto_supported.manual_mode.json
tests/fixtures/home_1234/: my_api_v2_me.json  tadov2.my_api_v2_home_state.json  tadox.heating.auto_mode.json  tadox.heating.boost_mode.json  tadox.heating.manual_mode.json  tadox.heating.manual_off.json  tadox.hops_homes.json  tadox.my_api_v2_home_state.json  tadox.schedule.json
tests/fixtures/tadox/: homes_response.json  hops_tado_homes_features.json  hops_tado_homes_heatPump.json  hops_tado_homes_programmer_domesticHotWater.json  hops_tado_homes_quickActions_boost_boostableZones.json  hops_tado_homes_settings_flowTemperatureOptimization.json  rooms_and_devices.json  rooms_response.json
